--- a/lab3-4.html
+++ b/lab3-4.html
@@ -1,5 +1,5 @@
 <script>
-n= Number(prompt("Îëøåì³"," "));
+n= Number(prompt("ÃÃ«Ã¸Ã¥Ã¬Â³"," "));
 a= []
 
 for (var i=0;i<n;i++){
@@ -9,7 +9,6 @@ a.push(Math.round(Math.random()*100));
 alert(a);
 
 function Max(){
-var array =[a],
 max = Math.max.apply(null,a);
 alert("\nmax :" +max);
 }
