--- a/lab3-5.html
+++ b/lab3-5.html
@@ -1,8 +1,7 @@
 <script>
-a= Number(prompt("A Санын енгіз"," "));
-b= Number(prompt("N Дареже енгіз"," "));
+a= Number(prompt("A Г‘Г Г­Г»Г­ ГҐГ­ГЈВіГ§"," "));
+b= Number(prompt("N Г„Г Г°ГҐГ¦ГҐ ГҐГ­ГЈВіГ§"," "));
 
 
 alert(Math.pow(a,b));
-power();
 </script>
